patient-app 버그 수정
